# driving_theory_test

./: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  configuration.ini.sample  main.py  pyproject.toml  question_bank.db  requirements.txt
driving_theory_test/: __init__.py  __main__.py  db.py  exam.py  home.py  question_bank.db  questions_bank.csv  utils.py
driving_theory_test/models/: ExamQuestions.py  __init__.py
driving_theory_test/static/: cover.css  question.css  question.js
driving_theory_test/templates/exam/: pre-exam.html  question.html  report_modal.html  results.html
driving_theory_test/templates/home/: about.html  cover.html  not_found.html
driving_theory_test/templates/layout/: base.html
static/: cover.css  question.css  questions.json  questions2.json  questions3.json  questions4.json  questions5.json  results.css
templates/: about.html  cover.html  pre-exam.html  question.html  results.html
